Fix footer spacing

--- a/css/main.css
+++ b/css/main.css
@@ -124,6 +124,7 @@ header {
 
 footer {
        background-color:  #000;
+       padding: 20px;
        vertical-align: middle;
        text-align: center;
        color: white;
